@@ -5,8 +5,9 @@ syslog-ng (3.3.0beta2-1~preview4) unstable; urgency=low
   * Do not install the ivykis manual pages anymore.
   * Update and finalize the debian/copyright file.
   * Document the packaging workflow better in debian/README.source.
+  * Use dpkg triggers to restart syslog-ng when appropriate.
 
- -- Gergely Nagy <algernon@madhouse-project.org>  Thu, 08 Sep 2011 13:47:56 +0200
+ -- Gergely Nagy <algernon@madhouse-project.org>  Sat, 10 Sep 2011 12:55:48 +0200
 
 syslog-ng (3.3.0beta2-1~preview3) unstable; urgency=low
 
